# ash-and-archive-studio

./: .gitignore  CONTRIBUTING.md  DUOLINGO_SPEECH_BLUEPRINT.md  FEATURE_ARCHITECTURE_V1.md  PRODUCT_REQUIREMENTS.md  README.md  SESSION_MEMORY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: studio-ci.yml
apps/studio-shell/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/studio-shell/src-tauri/: Cargo.toml  INSTALL-RUNBOOK.md  README.md  tauri.conf.json
apps/studio-shell/src-tauri/icons/: icon.icns
apps/studio-shell/src-tauri/src/: codex_page.rs  main.rs  route_log.rs  sampler.rs  world_vault.rs
canon/: ASH-AND-ARCHIVE-CANON.md
docs/: FEATURE_ROADMAP_BUILD_PLAN.md  HOME_PAGE_DESIGN_IDEAS.md  UI_SYSTEM.md
docs/design-system/: README.md  luxury-standard.md
docs/reference/: AWE-CX-005_React_UI_UX_Elite_Design_Blueprint.md  React as an Application Builder_ Capability, Risk, and Innovation Blueprint.txt  React_Forge_Custom_Instructions.md  World-Class React App Guide.txt
src/data/: index.ts  mockDashboardData.ts
src/hooks/: index.ts  useCommandPalette.ts  useDashboardMode.ts  useInteractionProfiler.ts  useSessionProximity.ts
src/lib/: analytics.ts  utils.ts
src/pages/: Dashboard.tsx  LandingPage.tsx
src/router/: routes.tsx
src/styles/: globals.css
studio/: SHIP-LEDGER.md
studio/ASSETS/: MANIFEST.json  PROVENANCE.json
studio/PIPELINE/: ELEMENTS.json  (+9 more)
(+211 files in other folders)
